[package]
name = "dungeoncrawl_redo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { git = "https://github.com/amethyst/bracket-lib" }
legion = { version = "~0.3.0" }
serde = { version = "=1.0.115" }
ron = "=0.6.1"

[profile.release]
lto = "thin"
